--- a/todo.txt
+++ b/todo.txt
@@ -7,6 +7,7 @@
 # Versions
 - 1(1.0.0) - Initial release
 - 1(1.0.1) - Change of Primary color for consistency
+- 1.0.1+3 - Fix for production data sync issue 
 
 
 ["What is the situation?","What are you doing?"]
