--- a/todo.txt
+++ b/todo.txt
@@ -8,6 +8,7 @@
 - 1(1.0.0) - Initial release
 - 1(1.0.1) - Change of Primary color for consistency
 - 1.0.1+3 - Fix for production data sync issue 
+- 1.0.2+4 - Added book_club
 
 
 ["What is the situation?","What are you doing?"]
