--- a/todo.txt
+++ b/todo.txt
@@ -9,6 +9,7 @@
 - 1(1.0.1) - Change of Primary color for consistency
 - 1.0.1+3 - Fix for production data sync issue 
 - 1.0.2+4 - Added book_club
+- 1.0.3+7 - Added Admob Adverts
 
 
 ["What is the situation?","What are you doing?"]
